--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,13 @@
+
 <div class="logo">
     <a href="{{site.baseurl}}/">
         FilmRater
     </a>
     <p class="slogan">Because we love films</p>
 </div>
+<input type="checkbox" name="toggle" id="toggle" class="nav-toggle">
 <nav class="site-nav">
+    <label for="toggle"><span class="close">X Close </span><span class="open"><i class="fas fa-bars"></i> Menu</span></label>
     <ul>
         {% assign nav = site.pages | sort:"order" %}
         {% for item in nav %}
