--- a/_assets/scss/_footer.scss
+++ b/_assets/scss/_footer.scss
@@ -6,6 +6,13 @@ footer{
     grid-template-columns: [content-start] repeat(3, 1fr) [content-end];
     grid-template-rows: 100px 20px;
 
+    @include responsive(mobile){
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: repeat(3, 1fr) 20px;
+        grid-gap: 1rem;
+    }
+
     h2{
         margin-bottom: 1.5rem;
         text-align: center;
@@ -20,21 +27,46 @@ footer{
         }
     }
 
-    .contact-us ul{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
+    .contact-us{
+        @include responsive(mobile){
+            grid-row: 2 / span 1;
+        }
 
-        li{
-            list-style: none;
-            flex: 0 0 45%;
-            text-align: center;
+        h2{
+            @include responsive(mobile){
+                margin-bottom: 0.5rem;
+            }
+        }
+
+        ul{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+    
+            
+    
+            li{
+                list-style: none;
+                flex: 0 0 45%;
+                text-align: center;
+    
+                @include responsive(tablet){
+                    flex: 1 1 100%;
+                    margin-bottom: 1rem;
+                }
+            }
         }
     }
 
-    .follow-us ul{
-        display: flex;
-        justify-content: center;
+    .follow-us{
+        @include responsive(mobile){
+            grid-row: 3 / span 1;
+        }
+
+        ul{
+            display: flex;
+            justify-content: center;
+        }
 
         li{
             list-style: none;
@@ -45,6 +77,10 @@ footer{
         i{
             color: var(--site-second-color);
             font-size: 1.5rem;
+
+            @include responsive(mobile){
+                font-size: 2rem;
+            }
         }
     }
 
@@ -52,5 +88,11 @@ footer{
         text-align: center;
         grid-column: content-start / content-end;
         margin-bottom: 0;
+
+        @include responsive(mobile){
+            grid-row: 4 / span 1;
+            text-align: center;
+            grid-column: 1 / span 1;
+        }
     }
 }
