--- a/_assets/scss/_home.scss
+++ b/_assets/scss/_home.scss
@@ -34,6 +34,10 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: space-evenly;
+
+        @include responsive(mobile){
+            width: 100%;
+        }
     }
 
     a{
@@ -45,6 +49,10 @@
         flex: 0 0 55%;
         padding: 1rem;
         border: 2px solid var(--site-main-color);
+
+        @include responsive(mobile){
+            flex: 1 1 100%;
+        }
 
         &:nth-child(1){
             margin-bottom: 2rem;
@@ -62,12 +70,30 @@
     margin: 6rem auto;
     padding: 0 2rem;
 
+    ul{
+        @include responsive(mobile){
+            flex-wrap: wrap;
+        }
+    }
+
     li{
         flex: 0 0 22%;
         list-style: none;
 
+        @include responsive(mobile){
+            flex: 1 1 100%;
+        }
+
+        &:not(:last-child){
+            @include responsive(mobile){
+                margin-bottom: 3rem;
+            }
+        }
+
         .member{
             text-align: center;
+
+            
 
             .media{
                 max-width: 300px;
@@ -77,6 +103,11 @@
                 z-index: 1;
                 border-radius: 5px;
                 box-shadow: 0px 0px 19px 4px rgba(0,0,0,0.75);
+
+                @include responsive(mobile){
+                    width: 80%;
+                    margin: 0 auto;
+                }
 
                 &:hover{
                     cursor: pointer;
@@ -151,26 +182,43 @@
     }
 
     form p{
-        width: 30%;
+        width: 50%;
         margin: 0 auto;
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-evenly;
 
+        @include responsive(mobile){
+           
+           width: 70%;
+        }
+
         input{
-            flex: 0 0 45%;
             border-radius: 5px;
+
+            @include responsive(tablet){
+                flex: 1 1 100%;
+            }
 
             &[type='email']{
                 padding: 0.4rem;
+                flex: 0 0 80%;
+                margin-bottom: 1rem;
             }
 
             &[type='submit']{
+                flex: 0 0 25%;
                 background: var(--site-second-color);
                 outline: none;
                 border: none;
                 color: var(--site-main-color);
                 font-weight: bold;
                 cursor: pointer;
+                padding: 0.5rem 0;
+
+                @include responsive(mobile){
+                    flex: 0 0 40%;
+                }
             }
         }
     }
@@ -180,10 +228,20 @@
     width: 80%;
     margin: 6rem auto;
 
+    ul{
+        @include responsive(mobile){
+            flex-wrap: wrap;
+        }
+    }
+
     ul li{
         text-align: center;
         flex: 0 0 30%;
         list-style: none;
+
+        @include responsive(mobile){
+            flex: 1 1 100%;
+        }
     }
 
     .testimonial{
