--- a/_assets/scss/_typography.scss
+++ b/_assets/scss/_typography.scss
@@ -21,6 +21,8 @@ h4{font-size: 1.6rem;}
 h5{font-size: 1.4rem;}
 h6{font-size: 1.2rem;}
 
-@media ( min-width: 600px ) {
-    html { font-size: var(--site-font-size-larger); }
+html{
+    @include responsive( laptop ) {
+        font-size: var(--site-font-size-larger);
+    }
 }
