--- a/_assets/scss/_blog.scss
+++ b/_assets/scss/_blog.scss
@@ -3,6 +3,10 @@
     margin: 0 auto;
     padding: 2rem 0;
 
+    @include responsive(mobile){
+        width: 90%;
+    }   
+
     &-title{
         text-align: center;
         font-size: 4rem;
@@ -15,6 +19,10 @@
 
         &:not(:last-child){
             margin-bottom: 10rem;
+
+            @include responsive(mobile){
+               margin-bottom: 8rem;
+            } 
         }
         
     }
@@ -89,6 +97,12 @@
     grid-gap: 4rem;
     padding: 2rem 4rem;
 
+    @include responsive(mobile){
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(3, 1fr);
+    } 
+
     .post-title{
         text-decoration: none;
     }
@@ -143,10 +157,20 @@ aside{
     grid-row: 1 / span 2;
     border-radius: 10px;
 
+    @include responsive(mobile){
+        grid-column: 1 / span 1;
+        grid-row: 4 / span 1;
+        padding: 0;
+    } 
+
     h2{
         color: var(--site-main-color);
         text-align: center;
         margin-bottom: 4rem;
+
+        @include responsive(mobile){
+            font-size: 3rem;
+        }
     }
 
     li{
