--- a/_assets/scss/_about.scss
+++ b/_assets/scss/_about.scss
@@ -8,6 +8,14 @@
     position: relative;
     z-index: 1;
 
+    @include responsive(mobile){
+        width: 90%;
+    }
+
+    @include responsive(phone){
+        padding: 2rem;
+    }
+
     &:after{
         display: block;
         content: '';
@@ -36,10 +44,14 @@
 
 .about{
     padding: 4rem 0;
-    width: 60%;
+    width: 80%;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
+
+    @include responsive(mobile){
+        width: 90%;
+    }
 
     .about-person {
         flex: 0 0 100%;
@@ -48,6 +60,10 @@
         border-radius: 5px;
         box-shadow: 0px 0px 19px 4px rgba(0,0,0,0.75);
         overflow: hidden;
+
+        @include responsive(mobile){
+            flex-wrap: wrap;
+        }
     }
 
     .about-person:not(:last-child){
@@ -58,7 +74,11 @@
         overflow: hidden;
         width: 70%;
         max-width: 400px;
-        flex:  0 0 50%;
+        flex: 0 0 45%;
+
+        @include responsive(mobile){
+            flex: 1 1 100%;
+        }
     }
 
     img{
@@ -69,10 +89,14 @@
 
     .content{
         flex: 1 1 50%;
-        padding: 2rem;
         background-color: var(--site-main-color);
         color: var(--site-second-color);
         padding: 10% 2%;
+
+        @include responsive(mobile){
+            flex: 1 1 100%;
+            padding: 2rem 0;
+        }
 
         h2{
             font-size: 3rem;
@@ -83,15 +107,20 @@
         ul{
             width: 60%;
             margin: 0 auto;
+
+            @include responsive(mobile){
+                width: 90%;
+            }
         }
 
         li{
             list-style: none;
             font-weight: 400;
+            font-size: 1.5rem;
 
             span{
                 font-weight: bold;
-                font-size: 1.2rem;
+                font-size: 1.8rem;
             }
         }
 
