--- a/_assets/scss/_blog.scss
+++ b/_assets/scss/_blog.scss
@@ -101,6 +101,8 @@
         display: grid;
         grid-template-columns: 1fr;
         grid-template-rows: repeat(3, 1fr);
+        grid-gap: 4rem;
+        padding: 2rem;
     } 
 
     .post-title{
