--- a/_assets/scss/_film.scss
+++ b/_assets/scss/_film.scss
@@ -4,16 +4,31 @@
     grid-template-rows: repeat(3, 1fr);
     padding: 2rem 4rem;
 
+    @include responsive(tablet){
+        grid-template-columns: 1fr;
+        padding: 2rem;
+        grid-gap: 4rem;
+    }
+
     .film{
         grid-row: 1 / span 3;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-gap: 2rem;
 
+        @include responsive(tablet){
+            grid-template-columns: 1fr;
+        }
+
         .heading{
             grid-column: 1 / span 3;
             grid-row: 1 / span 1;
             text-align: center;
+
+            @include responsive(tablet){
+                grid-column: 1 / span 1;
+                grid-row: 1 / span 1;
+            }
 
             h2{
                 font-size: 3rem;
@@ -30,11 +45,24 @@
         iframe{
             grid-column: 2 / span 1;
             grid-row: 2 / span 1;
+
+            @include responsive(tablet){
+                grid-column: 1 / span 1;
+                grid-row: 2 / span 1;
+
+                width: 100%;
+                height: 40vh;
+            }
         }
 
         .main-content{
             grid-column: 2 / span 1;
             grid-row: 3 / span 1;
+
+            @include responsive(tablet){
+                grid-column: 1 / span 1;
+                grid-row: 3 / span 1;
+            }
         }
 
         p{
@@ -78,6 +106,10 @@
         margin-top: 3rem;
         color: var(--site-main-color);
         font-weight: bold;
+
+        @include responsive(tablet){
+            margin-top: 1rem;
+        }
     }
 }
 
