--- a/_assets/scss/_films.scss
+++ b/_assets/scss/_films.scss
@@ -2,6 +2,10 @@
     width: 60%;
     margin: 0 auto;
 
+    @include responsive(mobile){
+        width: 70%;
+    }
+
     h2{
         text-align: center;
         font-size: 4rem;
@@ -20,6 +24,11 @@
     border-radius: 10px;
     padding: 2rem;
     box-shadow: 0px 0px 19px 4px rgba(0,0,0,0.75);
+
+    @include responsive(mobile){
+        grid-template-columns: 1fr;
+        grid-gap: 2rem;
+    }
 
     .film-card-media{
         overflow: hidden;
